# mathflat-extract-pdf

./: Dockerfile  docker-compose.yml  index.html  main.py  pyproject.toml
app/: index.html
