[project]
name = "mathflat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "uvicorn>=0.42.0",
    "webdriver-manager>=4.0.2",
]
